# aegis

./: AGENTS.md  CHANGELOG.md  Cargo.toml
crates/aegis-brew/: Cargo.toml
crates/aegis-brew/src/: lib.rs
crates/aegis-cli/: Cargo.toml
crates/aegis-cli/src/: main.rs
crates/aegis-core/src/: lib.rs
crates/aegis-policy/src/: lib.rs
tests/fixtures/brew/: info_gh.json  info_poppler.json  info_ripgrep.json  info_yq.json
